2004-05-27  Pascal Obry  <pascal@obry.org>

	* makefile:
	(check_mem): Remove sed command used to change the previous
	 AWS.Conatiners.Tables implementation based on
	 GNAT.Dynamic_Table. Not needed anymore.

2004-05-26  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* back_proc.adb:
	(Wait_Call): Add exception information to error message.

2004-05-26  Pascal Obry  <pascal@obry.org>

	* afile.adb: 
	Update test due to new default value for the Disposition parameter.
	
2004-05-26  Pascal Obry  <pascal@obry.org>

	* makefile:
	(RT_STD): Add no_param.

	* no_param.adb, no_param.out:
	Initial revision.

	* afile.adb:
	Minor reformatting.

2004-05-25  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* afile.adb:
	(CB): Add return from exception handler.

2004-05-24  Pascal Obry  <pascal@obry.org>

	* afile.adb:
	(CB): Rewrite to be thread safe as expected by the server.

	* afile_strm.ads:
	Removed.

2004-05-22  Pascal Obry  <pascal@obry.org>

	* afile.out:
	Initial revision.

	* makefile:
	(RT_STD): Add afile.

	* afile.adb, afile_strm.ads:
	Initial revision.

	* tpc.adb:
	Set to UNIX format.

2004-05-20  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* tpc.adb, tpc.out, makefile:
	Transient pages cleaner regression test.

2004-05-19  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sp.adb, ssp.adb, sp_pck.ads, sp_pck.adb:
	All common code moved to Sp_Pck.

	* ctab.adb:
	Free table at the end.

	* back_proc.adb:
	Base procedure for sback and ssback regression tests.

	* sback.adb, ssback.adb:
	Move all code to back_proc.adb

2004-05-17  Pascal Obry  <pascal@obry.org>

	* ctab.adb:
	Minor reformatting.
	Update copyright notice.

	* sessions2.adb:
	Clear session data before leaving and set session callback to null.
	Minor reformatting.

	* sessions.adb, sessions3.adb:
	Clear session data before leaving.
	Update copyright notice.

	* makefile:
	(RT_STD): Add ctable.

	* sp.adb, ssp.adb:
	Factorize code in Sp_Pck.

	* sp_pck.ads, sp_pck.adb:
	Initial revision.
